# liquibook-x

./: .clang-format  .gitignore  BENCHMARKS.md  CMakeLists.txt  DESIGN.md  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_matching_engine_latency.cpp  bench_order_book_latency.cpp  bench_parser.cpp  bench_ring_buffer_latency.cpp  latency_histogram.hpp
book/: CMakeLists.txt  order.hpp  order_book.cpp  order_book.hpp  price_level.hpp
book/tests/: reference_order_book.hpp  test_order_book.cpp  test_order_book_differential.cpp  test_order_book_itch_integration.cpp
cmake/: Sanitizers.cmake  Warnings.cmake
containers/: CMakeLists.txt  hash_map.hpp  intrusive_list.hpp  object_pool.hpp  spsc_ring_buffer.hpp
containers/tests/: test_hash_map.cpp  test_intrusive_list.cpp  test_object_pool.cpp  test_spsc_ring_buffer.cpp
engine/: CMakeLists.txt  events.hpp  matching_engine.hpp  order_types.hpp
engine/tests/: test_matching_engine.cpp  test_matching_engine_conservation.cpp
itch/: CMakeLists.txt  byteorder.hpp  decode.cpp  decode.hpp  file_reader.cpp  file_reader.hpp  messages.hpp  synth.cpp  synth.hpp  types.hpp
itch/tests/: test_byteorder.cpp  test_decode.cpp  test_file_reader.cpp  test_synth_roundtrip.cpp
pipeline/: CMakeLists.txt  itch_pipeline.hpp
pipeline/tests/: test_itch_pipeline.cpp
smoke/: CMakeLists.txt  test_version.cpp  version.cpp  version.hpp
testing/: allocation_guard.cpp  allocation_guard.hpp
